--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,3 @@
-altgraph==0.17.4
-asyncio==3.4.3
-attrs==23.2.0
-cffi==1.17.1
-cryptography==44.0.1
-docutils==0.21.2
-Faker==36.1.1
-filelock==3.15.4
-future==1.0.0
-iniconfig==2.1.0
-packaging==24.1
-pillow==10.4.0
-platformdirs==4.3.6
-pluggy==1.5.0
-pycparser==2.22
-Pygments==2.18.0
-pyinstaller==6.12.0
-pyinstaller-hooks-contrib==2025.1
 PyQt5==5.15.11
-PyQt5-Qt5==5.15.2
 PyQt5_sip==12.17.0
-pytest==8.3.4
-setuptools==75.8.1
-typing_extensions==4.12.2
-tzdata==2025.1
-wheel==0.45.1
+Requests==2.32.3
